welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();
droite();


while(estFaceMur==true & estSurBiscuit==false){
	droite();droite();
	prendBiscuit();
	avance();avance();avance();avance();avance();
	droite();droite();
	avance();
}

while(estSurBiscuit==false & estFaceMur==false){
	avance();
}
 while(estSurBiscuit==false & estSurMur==true){
 	droite();
 	avance();
 	gauche();
 	avance();
 }
